--- a/Blockchain/Voting App/src/css/styles.css
+++ b/Blockchain/Voting App/src/css/styles.css
@@ -1,19 +1,12 @@
-.bg {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+body {
+    background: linear-gradient(253deg, #0cc898, #1797d2, #864fe1);
     background-size: 300% 300%;
-    background-image: linear-gradient(-45deg,
-            rgba(59, 173, 227, 1) 0%,
-            rgba(87, 111, 230, 1) 25%,
-            rgba(152, 68, 183, 1) 51%,
-            rgba(255, 53, 127, 1) 100%);
-    animation: AnimateBG 20s ease infinite;
+    -webkit-animation: Background 25s ease infinite;
+    -moz-animation: Background 25s ease infinite;
+    animation: Background 25s ease infinite;
 }
 
-@keyframes AnimateBG {
+@-webkit-keyframes Background {
     0% {
         background-position: 0% 50%
     }
@@ -25,4 +18,51 @@
     100% {
         background-position: 0% 50%
     }
+}
+
+@-moz-keyframes Background {
+    0% {
+        background-position: 0% 50%
+    }
+
+    50% {
+        background-position: 100% 50%
+    }
+
+    100% {
+        background-position: 0% 50%
+    }
+}
+
+@keyframes Background {
+    0% {
+        background-position: 0% 50%
+    }
+
+    50% {
+        background-position: 100% 50%
+    }
+
+    100% {
+        background-position: 0% 50%
+    }
+}
+
+h1 {
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
+    font-size: 4em;
+    letter-spacing: -2px;
+    text-align: center;
+    text-shadow: 1px 2px 1px rgba(0, 0, 0, .6);
+}
+
+h1:after {
+    display: block;
+    color: #fff;
+    letter-spacing: 1px;
+    font-family: 'Poiret One', sans-serif;
+    font-size: .4em;
+    text-align: center;
 }
